--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import { Image} from 'astro:assets';
-import astroLogo from '../assets/astro-logo-dark.png';
-import tailwindLogo from '../assets/tailwindcss-logotype.png';
-import myselfLogo from '../assets/webSiteCreatorCredit.png';
-import heroImage from '../assets/heroImage.jpg';	
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import astroLogo from '@/assets/astro-logo-dark.png';
+import tailwindLogo from '@/assets/tailwindcss-logotype.png';
+import myselfLogo from '@/assets/webSiteCreatorCredit.png';
+import heroImage from '@/assets/heroImage.jpg';	
 ---
+
 <Layout>
 	<section class="py-20">
 		<div class="lg:border-y">
@@ -28,14 +26,14 @@ import heroImage from '../assets/heroImage.jpg';
 					</div>
 					<div class="flex flex-col mb-4 lg:mb-8 justify-center items-center lg:col-span-1">
 						<div class="flex-1 overflow-hidden w-[300px] h-[100px]">
-							<Image src={astroLogo} alt="Astro logo"  width="300" height="100" class="object-center"/>
+							<img src={astroLogo} alt="Astro logo" class="object-center"/>
 						</div>
 						<div class="hidden lg:flex lg:flex-col lg:justify-center lg:items-center">
 							<div class="flex-1 overflow-hidden w-[300px] h-[100px]">
-								<Image src={tailwindLogo} alt="Tailwindcss logo"  width="300" height="100" class="object-center"/>
+								<img src={tailwindLogo} alt="Tailwindcss logo" class="object-center"/>
 							</div>
 							<div class="flex-1 overflow-hidden w-[200px] h-[210px]">
-								<Image src={myselfLogo} alt="Credit logo"  width="200" height="210" class="object-center"/>
+								<img src={myselfLogo} alt="Credit logo" class="object-center"/>
 							</div>
 						</div>
 					</div>
@@ -45,7 +43,7 @@ import heroImage from '../assets/heroImage.jpg';
 				<div class="mr-8 px-2 md:px-4">
 					<div class="flex flex-col justify-center items-center gap-8 pr-8 lg:border-r">
 						<div class="lg:mt-8 hidden lg:block overflow-hidden h-[400px] w-auto">
-							<Image src={heroImage} alt="Hero image"  width="1200" height="400" class="object-left-bottom"/>
+							<img src={heroImage} alt="Hero image" class="object-left-bottom"/>
 						</div>
 						<div class="border-b pb-2 lg:pb-8">
 								<h2 class="text-2xl font-bold mt-8">What's so special about Astro?</h2>
