--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import astroLogo from '../assets/astro-logo-dark.png';
 import tailwindLogo from '../assets/tailwindcss-logotype.png';
-import myselfLogo from '../assets/webSiteCreatorCredit.png';
+import myselfLogo from '../assets/credit.png';
 import heroImage from '../assets/heroImage.jpg';	
 ---
 
