--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import astroLogo from '../assets/astro-logo-dark.png';
-import tailwindLogo from '../assets/tailwindcss-logotype.png';
-import myselfLogo from '../assets/credit.png';
-import heroImage from '../assets/heroImage.jpg';	
+import astroLogo from '/assets/astro-logo-dark.png';
+import tailwindLogo from '/tailwindcss-logotype.png';
+import myselfLogo from '/credit.png';
+import heroImage from '/heroImage.jpg';	
 ---
 
 <Layout>
