rerererere final commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,14 +22,14 @@ import Layout from '../layouts/Layout.astro';
 					</div>
 					<div class="flex flex-col mb-4 lg:mb-8 justify-center items-center lg:col-span-1">
 						<div class="flex-1 overflow-hidden w-[300px] h-[100px]">
-							<img src="/astro-logo-dark.png" alt="Astro logo" class="object-center"/>
+							<img src="astro-logo-dark.png" alt="Astro logo" class="object-center"/>
 						</div>
 						<div class="hidden lg:flex lg:flex-col lg:justify-center lg:items-center">
 							<div class="flex-1 overflow-hidden w-[300px] h-[100px]">
-								<img src="/tailwindcss-logotype.png" alt="Tailwindcss logo" class="object-center"/>
+								<img src="tailwindcss-logotype.png" alt="Tailwindcss logo" class="object-center"/>
 							</div>
 							<div class="flex-1 overflow-hidden w-[200px] h-[210px]">
-								<img src="/credit.png" alt="Credit logo" class="object-center"/>
+								<img src="credit.png" alt="Credit logo" class="object-center"/>
 							</div>
 						</div>
 					</div>
@@ -39,7 +39,7 @@ import Layout from '../layouts/Layout.astro';
 				<div class="mr-8 px-2 md:px-4">
 					<div class="flex flex-col justify-center items-center gap-8 pr-8 lg:border-r">
 						<div class="lg:mt-8 hidden lg:block overflow-hidden h-[400px] w-auto">
-							<img src="/heroImage.jpg" alt="Hero image" class="object-left-bottom"/>
+							<img src="heroImage.jpg" alt="Hero image" class="object-left-bottom"/>
 						</div>
 						<div class="border-b pb-2 lg:pb-8">
 								<h2 class="text-2xl font-bold mt-8">What's so special about Astro?</h2>
