--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import { Image} from 'astro:assets';
-import astroLogo from '@/assets/astro-logo-dark.png';
-import tailwindLogo from '@/assets/tailwindcss-logotype.png';
-import myselfLogo from '@/assets/webSiteCreatorCredit.png';
-import heroImage from '@/assets/heroImage.jpg';	
+import astroLogo from '../assets/astro-logo-dark.png';
+import tailwindLogo from '../assets/tailwindcss-logotype.png';
+import myselfLogo from '../assets/webSiteCreatorCredit.png';
+import heroImage from '../assets/heroImage.jpg';	
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
