--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ import heroImage from '../assets/heroImage.jpg';
 				</div>
 		
 			<div class="lg:col-span-2">
-				<div class="mr-8 px-2 md:px-4">
-					<div class="flex flex-col justify-center items-center gap-8 pr-8 lg:border-r">
+				<div class="ml-8 lg:ml-0 mr-8 px-2 md:px-4">
+					<div class="flex flex-col justify-center items-center gap-8 lg:pr-8 lg:border-r">
 						<div class="lg:mt-8 hidden lg:block overflow-hidden h-[400px] w-auto">
 							<Image src={heroImage} alt="Hero image"  width="1200" height="400" class="object-left-bottom"/>
 						</div>
